--- a/css/custom.css
+++ b/css/custom.css
@@ -173,6 +173,14 @@ footer p {
     width: 30px;
     height: 30px;
 }
+.alcohol{
+    width: 30px;
+    height: 30px;
+}
+.laktose{
+    width: 30px;
+    height: 30px;
+}
 .data-discount {
     padding: 8px;
     margin-left: 10px;
