--- a/css/custom.css
+++ b/css/custom.css
@@ -169,11 +169,11 @@ footer p {
     align-items: baseline;
 
 }
-.vegetarian{
+img.vegetarian{
     width: 30px;
     height: 30px;
 }
-.alcohol{
+img.alcohol{
     width: 30px;
     height: 30px;
 }
