--- a/css/custom.css
+++ b/css/custom.css
@@ -7,7 +7,7 @@
   --font-color-primary: #2E2F45;
   --font-color-secondary: #E3A536;
   --font-body:'Montserrat', sans-serif;
-  --font-headers:'Montserrat', sans-serif;
+  --font-headers:'Domine', serif;
 }
 
 * {
@@ -29,7 +29,9 @@ main{
             padding: 10vw;
 }
 
-h1,
+h1{
+         letter-spacing: 3px;
+}
 h2,
 h3,
 h4,
@@ -38,7 +40,7 @@ h6,
 nav a,
 button,
 footer {
-  font-family: var(--font-headers);
+  font-family: var(--font-body);
 }
 
 nav a,
@@ -48,16 +50,21 @@ h2 {
 }
 
 #header {
-  display: flex;
-  align-items: flex-end;
+  align-items: center;
+    width: 100%;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    font-family: var(--font-headers);
 }
 
 nav {
   background-color: var(--secondary-light);
   width: 100%;
   height: 50px;
+    font-family: var(--font-body);
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 }
 
@@ -66,10 +73,6 @@ nav a {
   text-decoration: none;
   padding: 35px;
   height: 100px;
-}
-
-nav a:first-child {
-  margin-right: auto;
 }
 
 nav a:hover {
